# ComfyUI-DualPanel-Subgraph-Viewer

./: .gitignore  AGENTS.md  README.md  README_ja.md  __init__.py  pyproject.toml
.serena/: project.yml
docs/adr/: 2025-10-18-dual-panel-initial.md  2025-10-19-dual-panel-resize.md
docs/requirements/: 000-dual-panel-subgraph.md
js/: dual_panel_subgraph.js
