[project]
name = "dualpanel-subgraph-viewer"
description = "A frontend extension for ComfyUI that allows you to open and edit subgraphs in a right-hand panel, instead of replacing the main canvas."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/nomadoor/ComfyUI-DualPanel-Subgraph-Viewer"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/nomadoor/ComfyUI-DualPanel-Subgraph-Viewer/wiki"
"Bug Tracker" = "https://github.com/nomadoor/ComfyUI-DualPanel-Subgraph-Viewer/issues"

[tool.comfy]
PublisherId = "nomadoor"
DisplayName = "ComfyUI-DualPanel-Subgraph-Viewer"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

